--- a/CI-19-2-talleres/src/main/resources/application.properties
+++ b/CI-19-2-talleres/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-CON=spring.h2.console.enabled\=true\nspring.h2.console.path\=/h2-console
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
